<resources>
    <string name="app_name">Queens</string>
    <string name="game_reset_game_button_label">Reset Game</string>
    <string name="game_screen_title">%s Queens</string>
    <string name="game_choose_board_size_button_content_description">Choose board size</string>
    <string name="game_new_game_button_label">New Game</string>
    <string name="game_queens_to_win">Queens to win</string>
    <string name="game_win_message">Win!</string>
    <string name="close_button_content_description">Close</string>
    <string name="board_size_screen_title">Choose Board Size</string>
    <string name="board_size_play_button_title">Play</string>
    <string name="board_size_make_smaller_button_content_description">Make the board smaller</string>
    <string name="board_size_make_larger_button_content_description">Make the board larger</string>
    <string name="win_congratulations">Congratulations!</string>
    <string name="win_success_message">You have successfully placed %1$d queens on the board without any conflicts!</string>
</resources>