...
        )
    }
}

@VisibleForTesting
object QueensGameScreenTestTags {
    const val BOARD = "BOARD"
    const val COUNT_TO_WIN_TEXT = "COUNT_TO_WIN_TEXT"
}

